Bug 329810, middle click on a link does not work in Camino trunk builds r+sr=bz